--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,3 +1,18 @@
+@inproceedings{akiba2019,
+  title = {Optuna: {{A Next-generation Hyperparameter Optimization Framework}}},
+  shorttitle = {Optuna},
+  booktitle = {Proceedings of the 25th {{ACM SIGKDD International Conference}} on {{Knowledge Discovery}} \& {{Data Mining}}},
+  author = {Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
+  year = 2019,
+  month = jul,
+  pages = {2623--2631},
+  publisher = {ACM},
+  address = {Anchorage AK USA},
+  doi = {10.1145/3292500.3330701},
+  urldate = {2026-01-09},
+  langid = {english}
+}
+
 @article{bengtsson2021,
   title = {A {{Unifying Framework}} for {{Parallel}} and {{Distributed Processing}} in {{R}} Using {{Futures}}},
   author = {Bengtsson, Henrik},
@@ -26,21 +41,7 @@
   archiveprefix = {arXiv}
 }
 
-@misc{egele2023,
-  title = {Asynchronous {{Decentralized Bayesian Optimization}} for {{Large Scale Hyperparameter Optimization}}},
-  author = {Egele, Romain and Guyon, Isabelle and Vishwanath, Venkatram and Balaprakash, Prasanna},
-  year = 2023,
-  month = sep,
-  number = {arXiv:2207.00479},
-  eprint = {2207.00479},
-  primaryclass = {cs},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.2207.00479},
-  urldate = {2025-06-13},
-  archiveprefix = {arXiv}
-}
-
-@inproceedings{egele2023a,
+@inproceedings{egele2023,
   title = {Asynchronous Decentralized Bayesian Optimization for Large Scale Hyperparameter Optimization},
   booktitle = {2023 {{IEEE}} 19th {{International Conference}} on E-{{Science}} (e-{{Science}})},
   author = {Egel{\'e}, Romain and Guyon, Isabelle and Vishwanath, Venkatram and Balaprakash, Prasanna},
@@ -48,6 +49,45 @@
   pages = {1--10},
   publisher = {IEEE},
   urldate = {2025-12-14}
+}
+
+@article{egele2024,
+  title = {The Unreasonable Effectiveness of Early Discarding after One Epoch in Neural Network Hyperparameter Optimization},
+  author = {Egele, Romain and Mohr, Felix and Viering, Tom and Balaprakash, Prasanna},
+  year = 2024,
+  month = sep,
+  journal = {Neurocomputing},
+  volume = {597},
+  pages = {127964},
+  issn = {0925-2312},
+  doi = {10.1016/j.neucom.2024.127964},
+  urldate = {2026-02-03}
+}
+
+@article{egele2025,
+  title = {{{DeepHyper}}: {{A Python Package}} for {{Massively Parallel Hyperparameter Optimization}} in {{Machine Learning}}},
+  shorttitle = {{{DeepHyper}}},
+  author = {Egele, Romain and Balaprakash, Prasanna and Wiggins, Gavin M. and Eiffert, Brett},
+  year = 2025,
+  month = may,
+  journal = {Journal of Open Source Software},
+  volume = {10},
+  number = {109},
+  pages = {7975},
+  issn = {2475-9066},
+  doi = {10.21105/joss.07975},
+  urldate = {2026-02-01},
+  langid = {english}
+}
+
+@misc{fitzjohn2025,
+  title = {Redux: {{R Bindings}} to 'Hiredis'},
+  shorttitle = {Redux},
+  author = {FitzJohn, Rich},
+  year = 2025,
+  month = sep,
+  urldate = {2026-01-31},
+  copyright = {GPL-2}
 }
 
 @misc{gao2025,
@@ -73,6 +113,29 @@
   doi = {10.1007/978-3-642-10701-6_6},
   urldate = {2025-06-13},
   langid = {english}
+}
+
+@manual{landau2023,
+  type = {Manual},
+  title = {Crew: A Distributed Worker Launcher Framework},
+  author = {Landau, William Michael},
+  year = 2023
+}
+
+@article{lang2017,
+  title = {Batchtools: {{Tools}} for {{R}} to Work on Batch Systems},
+  shorttitle = {Batchtools},
+  author = {Lang, Michel and Bischl, Bernd and Surmann, Dirk},
+  year = 2017,
+  month = feb,
+  journal = {The Journal of Open Source Software},
+  volume = {2},
+  number = {10},
+  pages = {135},
+  issn = {2475-9066},
+  doi = {10.21105/joss.00135},
+  urldate = {2026-01-31},
+  copyright = {http://creativecommons.org/licenses/by/4.0/}
 }
 
 @inproceedings{li2014,
@@ -101,10 +164,55 @@
   langid = {english}
 }
 
-@article{moritz,
+@misc{liaw2018,
+  title = {Tune: {{A Research Platform}} for {{Distributed Model Selection}} and {{Training}}},
+  shorttitle = {Tune},
+  author = {Liaw, Richard and Liang, Eric and Nishihara, Robert and Moritz, Philipp and Gonzalez, Joseph E. and Stoica, Ion},
+  year = 2018,
+  month = jul,
+  number = {arXiv:1807.05118},
+  eprint = {1807.05118},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1807.05118},
+  urldate = {2026-01-31},
+  archiveprefix = {arXiv}
+}
+
+@misc{mersmann2024,
+  title = {Microbenchmark: {{Accurate Timing Functions}}},
+  shorttitle = {Microbenchmark},
+  author = {Mersmann, Olaf and Beleites, Claudia and Hurling, Rainer and Friedman, Ari and Ulrich, Joshua M.},
+  year = 2024,
+  month = sep,
+  urldate = {2026-02-01},
+  copyright = {BSD\_2\_clause + file LICENSE}
+}
+
+@article{moritz2018,
   title = {Ray: {{A Distributed Framework}} for {{Emerging AI Applications}}},
   author = {Moritz, Philipp and Nishihara, Robert and Wang, Stephanie and Tumanov, Alexey and Liaw, Richard and Liang, Eric and Elibol, Melih and Yang, Zongheng and Paul, William and Jordan, Michael I and Stoica, Ion},
+  year = 2018,
   langid = {english}
+}
+
+@misc{olson2025,
+  title = {Ax: {{A Platform}} for {{Adaptive Experimentation}}},
+  shorttitle = {Ax},
+  author = {Olson, Miles and Santorella, Elizabeth and Tiao, Louis C. and Cakmak, Sait and Garrard, Mia and Daulton, Samuel and Lin, Zhiyuan Jerry and Ament, Sebastian and Beckerman, Bernard and Onofrey, Eric and Igusti, Paschal and Lara, Cristian and Letham, Benjamin and Cardoso, Cesar and Shen, Shiyun Sunny and Lin, Andy Chenyuan and Grange, Matthew and Kashtelyan, Elena and Eriksson, David and Balandat, Maximilian and Bakshy, Eytan},
+  year = 2025,
+  month = jun,
+  urldate = {2025-11-06},
+  langid = {english}
+}
+
+@inproceedings{rocklin2015,
+  title = {Dask: {{Parallel}} Computation with Blocked Algorithms and Task Scheduling},
+  booktitle = {Proceedings of the 14th Python in Science Conference},
+  author = {Rocklin, Matthew},
+  editor = {Huff, Kathryn and Bergstra, James},
+  year = 2015,
+  pages = {130--136}
 }
 
 @article{rossini2007,
@@ -120,6 +228,13 @@
   publisher = {[American Statistical Association, Taylor \& Francis, Ltd., Institute of Mathematical Statistics, Interface Foundation of America]},
   issn = {1061-8600},
   urldate = {2026-01-22}
+}
+
+@manual{rsigdb2024,
+  type = {Manual},
+  title = {{{DBI}}: {{R}} Database Interface},
+  author = {{R Special Interest Group on Databases (R-SIG-DB)} and Wickham, Hadley and M{\"u}ller, Kirill},
+  year = 2024
 }
 
 @book{seguin2009,
