--- a/vignettes/paper.qmd
+++ b/vignettes/paper.qmd
@@ -25,39 +25,64 @@ options(datatable.prettyprint.char = 10L)
 
 # Abstract {#sec-abstract}
 
-Distributed computing is a powerful tool for solving large-scale problems.
-However, relying on a central process to generate tasks becomes a bottleneck in large-scale problems.
-We present rush, a package for asynchronous and distributed computing in R.
-Employing a database centric model, rush enables workers to communicate over a shared Redis database.
-This architecture allows workers to generate and evaluate tasks independently, eliminating central coordination bottlenecks.
-Aiming for minimal overhead per task (~0.5 ms), rush features robust error handling with automatic detection of lost workers, and an efficient caching mechanism that minimizes database operations.
-Rush integrates seamlessly with the mlr3 ecosystem, powering asynchronous optimization in the bbotk and mlr3tuning packages.
-We demonstrate the usability of rush by implementing asynchronous distributed Bayesian optimization.
-Benchmarks show that rush scales efficiently to over 1024 workers while maintaining high CPU utilization.
+Optimizing modern machine learning algorithms often requires substantial computational resources.
+Distributed computing provides an effective approach for addressing such large-scale optimization problems.
+We present `rush`, a package for asynchronous and distributed computing in R.
+Employing a database centric model, `rush` enables workers to communicate over a shared Redis database.
+This decentralized architecture allows workers to generate and evaluate tasks independently, thereby avoiding central coordination bottlenecks.
+Aiming for minimal overhead per task, rush features robust error handling with automatic detection of lost workers, and an efficient caching mechanism that minimizes database operations.
+Rush integrates seamlessly with the `mlr3` ecosystem, powering asynchronous optimization algorithms in the `bbotk` and `mlr3tuning` packages.
+We show how `rush` enables the implementation of state-of-the-art optimization algorithms such as asynchronous decentralized Bayesian optimization.
+The paper further includes a benchmark evaluating the runtime performance of the core functionality of `rush`.
+We demonstrate that `rush` scales efficiently to over 448 workers while achieving higher CPU utilization than traditional approaches.
 
 # Introduction {#sec-introduction}
 
-Distributed computing is a powerful tool for solving large-scale problems in R, including black-box optimization and hyperparameter tuning.
-Ever-increasing amounts of data and computational expensive algorithms require work to be distributed across many computers.
-Traditional approaches to parallel computing in R, such as the `parallel` and `future` packages, follow a controller-worker model where a central process distributes tasks to workers and collects results.
-While effective for many use cases, this architecture introduces a coordination bottleneck: the central controller must generate all tasks, track their status, and aggregate results.
-For optimization algorithms that require rapid iteration and asynchronous task generation such as Bayesian optimization [@egele2023] and hyperband [@li2020] this bottleneck limits scalability.
+<!--context-->
+Black-box optimization addresses problems where the objective is accessible only through function evaluations and derivatives are unavailable or unreliable.
+In machine learning, this setting arises naturally in hyperparameter optimization, where each evaluation corresponds to training and validating a model.
+As datasets and model complexity continue to grow, the resulting computational cost often necessitates distributing evaluations across many machines.
+But scaling optimization algorithms to hundreds of workers exposes a fundamental limitation: the central controller becomes a bottleneck.
+When the central controller cannot generate new tasks fast enough to keep up with the workers, the scalability of the optimization algorithm is limited.
 
-Recent packages like `batchtools` and `crew` address distributed computing on high-performance clusters but incur significant overhead per task, making them unsuitable for workloads involving many fast-running evaluations.
-The `rrq` package reduces this overhead by using Redis as a task queue, but still relies on centralized task distribution.
+Traditional approaches to parallel computing in R, such as the `parallel` and `future` [@bengtsson2021] packages, follow a controller-worker model where a central process
+proposes tasks, dispatches them to workers, and collects results (Figure @fig-rush-network left).
+Packages like `batchtools` [@lang2017] and `crew` [@landau2023] address distributed computing on high-performance clusters but follow the same controller-worker model.
+The `rrq` package reduces overhead per task by using Redis as a task queue, but still relies on central controller to propose tasks and collect results.
+The `mirai` package [@gao2025] emphasizes asynchronous evaluation at scale, but it does not by itself remove controller-centric coordination in optimization workflows.
 
-We present rush, a package for asynchronous and distributed computing in R.
-Unlike existing solutions, rush eliminates the central controller by allowing workers to communicate over a shared Redis database.
-This enables a decentralized architecture where workers can independently generate, evaluate, and share tasks without central coordination.
-Rush features low overhead per task (~0.5 ms), robust error handling with automatic detection of lost workers, and an efficient caching mechanism that minimizes database operations.
-Rush integrates seamlessly with the mlr3 ecosystem, powering asynchronous optimization in the bbotk and mlr3tuning packages.
-We demonstrate the usability of rush by implementing asynchronous distributed Bayesian optimization.
-Benchmarks show that rush scales efficiently to over 1024 workers while maintaining high CPU utilization.
+<!-- research question -->
+A decentralized alternative is to let each worker run an optimization loop while exchanging information through shared state, thereby avoiding a single point of coordination (Figure @fig-rush-network right).
+Algorithms like Bayesian optimization [@egele2023] and asynchronous hyperband [@li2020] are examples for this.
+Software frameworks for decentralized optimization like `Ray Tune` [@liaw2018], `DeepHyper` [@egele2025], `Optuna` [@akiba2019] are available in Python.
+In contrast, R lacks a comparable framework for asynchronous and decentralized optimization.
 
-rush allows researchers to develop new distributed optimization algorithms and empowers end users to solve large-scale problems with minimal effort.
+<!-- solution -->
+To fill this gap, we present `rush`, a package for decentralized optimization in R.
+Unlike existing solutions, `rush`  allows workers to communicate asynchronously over a shared Redis database.
+`rush` provides a rich API for task and results and their states
+It  features low overhead per task, robust error handling with automatic detection of lost workers, and an efficient caching mechanism that minimizes database operations.
+`rush` integrates seamlessly with the mlr3 ecosystem, powering asynchronous optimization in the `bbotk` and `mlr3tuning` packages.
+
+<!-- main conclusion -->
+`rush` allows researchers to develop new distributed optimization algorithms and empowers end users to solve large-scale problems with minimal effort.
+We demonstrate the usability of `rush` by implementing asynchronous distributed Bayesian optimization.
+Our benchmarks show that `rush` scales efficiently to over 448 workers while maintaining high CPU utilization.
+
+::: {#fig-rush-network}
+
+![](network_types.png)
+
+Centralized (left) and decentralized (right) optimization networks.
+Hexagons denote processes, including the main process `M` and workers `W`.
+`O` denotes the optimizer, which proposes tasks and incorporates their results, and `f` denotes the objective function to be optimized.
+In the centralized network, `M` runs `O`, proposes tasks to the workers, and processes the returned evaluations of `f`.
+In the decentralized network, each worker `W` runs its own instance of `O`, evaluates `f`, and exchanges task information via a shared `Redis` database (red rectangle).
+:::
 
 ## Related Work {#sec-related-work}
 
+<!-- Parallel backends -->
 As multi-core processors became commonplace in the 2000s, there was a growing need to utilize these resources effectively for computational tasks in R.
 The first packages to address this need were `snow` [@tierney2021] and `multicore`.
 With R version 2.14.0 (released in 2011), parallel computing capabilities were integrated into the base R system through the `parallel` package.
@@ -67,31 +92,54 @@ The R session is blocked until all tasks are finished and it is not possible to 
 Moreover, load balancing can be an issue when the tasks have different runtimes.
 
 The landscape further evolved with the release of the `future` [@bengtsson2021] package in 2016, which provided a unified and flexible parallel computing interface in R, supporting various backends such as `multisession`, `multicore`, and `callr`.
+The `multisession` and `cluster` backends are limited to 125 workers.
+Since each future is by default evaluated in a new process, the overhead per task can be significant.
 The `future.apply` package implements parallel versions of the `*apply()` family functions, compatible with the `future` backends.
 
-With the rise of high-performance computing (HPC) clusters, the `batchtools` package was developed to facilitate the execution of long-running tasks on these systems.
+The `mirai` package [@gao2025] evaluates an R expression asynchronously in a parallel process, locally or distributed over the network.
+The package has a strong focus on throughput, low overhead and modern networking, eliminating many drawback of the older approaches.
+
+<!-- Distributed computing and HPC -->
+With the rise of high-performance computing (HPC) clusters, the `batchtools` [@lang2017] package was developed to facilitate the execution of long-running tasks on these systems.
 The communication between the main process and the workers runs completely over the file system.
 A notable feature of the package is the assistance in conducting large-scale computer experiments.
-A more recent development in distributed computing is the `crew` package.
+A more recent development in distributed computing is the `crew` [@landau2023] package.
 The package is designed for long-running tasks in distributed systems, ranging from traditional high-performance clusters to cloud computing platforms.
 A drawback of both systems is the high overhead per task.
 
-The `rrq` package is a task queue system for R using Redis.
-It addresses the limitations of the packages by providing a non-blocking interface to parallel computing and keeping the overhead per task low.
-The package allows non-interacting queues with priority levels within a queue and dependencies among tasks.
-The package has an advanced error-handling mechanism, heavily influencing the heartbeat mechanism of `rush`.
+<!-- Python -->
+The Python ecosystem offers several tools for distributed computing in machine learning.
+DeepHyper [@egele2025] supports massively parallel hyperparameter optimization workflows.
+Ray Tune [@liaw2018] provides distributed hyperparameter optimization and experiment management.
+Dask [@rocklin2015] enables parallel and distributed execution via a dynamic task scheduler that scales from a single machine to multi-node clusters.
 
-<!-- `rush` aligns closely with `rrq` but differentiates itself with its integration into our optimization packages packages `botk` and `mlr3tuning`.
-This includes a data structure in Redis that can be efficiently converted to a `"data.table::data.table()"` and a cache mechanism that minimizes the number of read and write operations in the R session.
-Moreover, the start of workers with minimal user configuration is integrated with the `"processx"` package.
-Looking ahead, rush allows a decentralized network architecture devoid of a central controller. -->
+<!-- Database connectivity layers -->
+The parallel and distributed computing ecosystem in R is complemented by database connectivity layers that enable shared state and coordination.
+For relational database management systems, `DBI` [@rsigdb2024] defines a standardized interface that separates a common front end from database-specific back ends.
+For `Redis`, `redux` provides R bindings to the Redis API and exposes the command set through a low-level and a higher-level interface.
+
+The `rrq` package is a task queue system for R using Redis as a coordination backend.
+It addresses the limitations of other packages by providing a non-blocking interface to parallel computing and keeping the overhead per task low.
+The package allows non-interacting queues with priority levels within a queue and dependencies among tasks.
+`rrq` is implemented on top of `redux`, which provides the underlying Redis connectivity and command interface.
+The package has an advanced error-handling mechanism, heavily influencing the heartbeat mechanism of `rush`.
 
 # General Structure of Rush {#sec-general-structure}
 
 A Rush network consists of multiple workers that communicate via a shared Redis database.
 Each worker evaluates tasks and pushes the corresponding results back to the database.
 
-![The architecture of a rush network. A hexagon represents a worker and the rectangle represent the Redis database. The worker loop creates a task `T` and evaluates it on the objective function `f` and pushes the output `y`.](network.png){#fig-rush-network width=100%}
+::: {#fig-rush-network}
+
+![The architecture of a rush network.](rush_network.png){#fig-rush-network width=100%}
+
+The architecture of a rush network.
+A hexagon represents a worker and the rectangle represent the `Redis` database.
+Each worker `W` runs its own instance of `O`, evaluates `f`, and exchanges task information via a shared `Redis` database.
+The optimizer `O` gathers information about the tasks and their results with `$fetch_finished_tasks()`.
+Creates a new task based on these information and store it in the `Redis` database with `$push_running_tasks()`.
+When the task is evaluated, the results are pushed to the `Redis` database with `$push_results()`.
+:::
 
 We illustrate the basic functionality of Rush using an example optimization problem based on the Branin function.
 
@@ -102,6 +150,7 @@ The Branin function serves as a toy benchmark for optimization that is fast to e
 
 ![Branin function](branin.png){#fig-branin width=100%}
 
+:::{.column-body-outset}
 
 ```{r}
 branin = function(x1, x2) {
@@ -109,11 +158,14 @@ branin = function(x1, x2) {
 }
 ```
 
+:::
+
+
 ## Worker Loop
 
-We define the worker_loop function, which is executed on each worker.
+We define the `worker_loop` function, which is executed on each worker.
 The function repeatedly creates tasks, evaluates them, and sends the results to the Redis database.
-It takes a single argument, a RushWorker object, which manages communication with Redis.
+It takes a single argument, a `RushWorker` object, which manages communication with Redis.
 In this example, each worker samples a random point, constructs a task, evaluates it using the Branin function, and submits the result.
 The optimization terminates after 100 tasks have been evaluated.
 
@@ -375,7 +427,7 @@ By default, log messages are not stored.
 
 # Tutorial
 
-We implement Asynchronous Distributed Bayesian Optimization (ADBO) [@egele_2023] next.
+We implement Asynchronous Distributed Bayesian Optimization (ADBO) [@egele2023] next.
 This example shows how workers use information about running and finished tasks and introduces task queues.
 ADBO runs sequential [Bayesian optimization](https://mlr3book.mlr-org.com/chapters/chapter5/advanced_tuning_methods_and_black_box_optimization.html#sec-bayesian-optimization) on multiple workers in parallel.
 Each worker maintains its own surrogate model (a random forest) and selects the next hyperparameter configuration by maximizing the upper confidence bounds acquisition function.
@@ -419,7 +471,7 @@ These steps are executed sequentially by the main process.
 With many workers, the main process becomes a bottleneck.
 New points cannot be proposed fast enough to keep up with the workers.
 
-Asynchronous Decentralized Bayesian Optimization (ADBO) [@egele_2023] distributes the surrogate updates and the acquisition function optimization across the workers.
+Asynchronous Decentralized Bayesian Optimization (ADBO) [@egele2023] distributes the surrogate updates and the acquisition function optimization across the workers.
 Each worker maintains its own surrogate model and proposes the next hyperparameter configuration by maximizing the acquisition function.
 When a worker completes an evaluation, it asynchronously sends the result to its peers; each worker then updates its local model with this shared information.
 Like CL and ACBO, configurations currently being evaluated are imputed.
@@ -428,7 +480,7 @@ For example, the lambda values of the upper confidence bounds acquisition functi
 For algorithms like ADBO, a system like rush is necessary, allowing the workers to asynchronously exchange information.
 With rush, the the main process can be avoided completely.
 
-The benchmarks are focused on the effective CPU utilization of the algorithms following the recommendations of @egele_2023.
+The benchmarks are focused on the effective CPU utilization of the algorithms following the recommendations of @egele2023.
 The effective CPU utilization is an important metric because more utilization implies more evaluated points per time unit.
 Increased evaluation throughput might lead to a higher final performance.
 Let $n_{workers}$ denote the number of workers, where each worker corresponds to a single CPU core
@@ -447,20 +499,24 @@ All code is available on GitHub at https://github.com/slds-lmu/paper_2026_rush.
 
 ::: {#tbl-benchmarks}
 
-| Task               | Algorithm | Mean Runtime Learners [s] | Evaluations | Utilization |
-|:-------------------|:----------|--------------------------:|------------:|------------:|
-| german-credit      | CL        |                         1 |         396 |      0.0033 |
-|                    | ACBO      |                         1 |         461 |      0.0031 |
-|                    | ADBO      |                         1 |      15,451 |      0.9500 |
-| kddcup09-appetency | CL        |                        27 |         132 |      0.0110 |
-|                    | ACBO      |                        23 |         473 |      0.0450 |
-|                    | ADBO      |                        30 |       6,702 |      0.9400 |
-| adult              | CL        |                        11 |         308 |      0.0160 |
-|                    | ACBO      |                        12 |         463 |      0.0230 |
-|                    | ADBO      |                        14 |      10,169 |      0.9600 |
-| airlines           | CL        |                       313 |          88 |      0.0970 |
-|                    | ACBO      |                       183 |         435 |      0.3100 |
-|                    | ADBO      |                       261 |         993 |      1.0000 |
+| Task               | Algorithm | Mean Runtime CV [s] | Evaluations | Utilization [%] |
+|:-------------------|:----------|--------------------:|------------:|----------------:|
+| german-credit      | CL        |                   1 |         396 |            0.33 |
+|                    | ACBO      |                   0 |         461 |            0.31 |
+|                    | ADBO      |                   1 |      15,451 |           95.00 |
+| kddcup09-appetency | CL        |                  27 |         132 |            1.10 |
+|                    | ACBO      |                  23 |         473 |            4.50 |
+|                    | ADBO      |                  30 |       6,702 |           94.00 |
+| adult              | CL        |                  11 |         308 |            1.60 |
+|                    | ACBO      |                  12 |         463 |            2.30 |
+|                    | ADBO      |                  14 |      10,169 |           96.00 |
+| airlines           | CL        |                 313 |          88 |            9.70 |
+|                    | ACBO      |                 183 |         435 |           31.00 |
+|                    | ADBO      |                 261 |         993 |          100.00 |
+
+Effective CPU utilization and the number of completed evaluations for CL, ACBO, and ADBO across four benchmark tasks.
+For each task–algorithm combination, the table reports the mean runtime of the 10-fold cross-validation in seconds, the total number of completed evaluations, and the resulting effective CPU utilization in percent.
+The CPU utilization increases with the mean runtime of the 10-fold cross-validation for all algorithms.
 :::
 
 The effective CPU utilization and the number of completed evaluations are summarized in Table @tbl-benchmarks.
@@ -475,12 +531,6 @@ Here, CL and ACBO complete only a few hundred evaluations.
 In contrast, ADBO completes more than an order of magnitude additional evaluations.
 The utilization gap exceeds two orders of magnitude in this regime.
 
-On tasks with very short learner runtimes, centralized methods leave most compute resources idle.
-This effect is particularly visible on the german-credit task.
-Here, CL and ACBO complete only a few hundred evaluationhttps://github.com/slds-lmu/paper_2026_rushs.
-In contrast, ADBO completes more than an order of magnitude additional evaluations.
-The utilization gap exceeds two orders of magnitude in this regime.
-
 On medium-cost tasks such as adult and kddcup09-appetency, the same pattern persists.
 ACBO improves utilization relative to CL by reducing synchronization overhead.
 Nevertheless, the centralized update step remains a limiting factor.
@@ -491,29 +541,54 @@ As a result, utilization increases for all algorithms.
 Even in this favorable regime, ADBO maintains a substantial advantage.
 Its utilization remains at least three times higher than that of ACBO.
 The decentralized design therefore scales robustly across workload regimes.
+See Figure @fig-cl-cpu-utilization for an illustration of the CPU utilization of CL under short-running and long-running learner runtimes.
 
-The wall-clock runtime of CLBO frequently exceeds the nominal 10-minute budget.
+The wall-clock runtime of CL frequently exceeds the nominal 10-minute budget.
 This effect is documented in Table @tbl-benchmarks-extra.
-CLBO checks the termination criterion only after an entire batch finishes.
+CL checks the termination criterion only after an entire batch finishes.
 If a batch starts shortly before the time limit, the experiment continues until all evaluations complete.
 This behavior introduces systematic budget overruns.
 ACBO and ADBO apply termination checks after every completed evaluation.
 This finer-grained control enforces the wall-clock constraint more accurately.
-Asynchronous scheduling therefore improves both utilization and budget compliance.
+Asynchronous scheduling therefore improves both utilization and budget adherence.
+
+::: {#fig-cl-cpu-utilization}
+
+![CPU Utilization of CL](cl_cpu_utilization.png)
+
+CPU utilization over time for CL under short-running (left) and long-running (right) objective functions.
+Red rectangles denote the proposal phase, and blue rectangles denote the evaluation phase.
+Rectangle height indicates CPU utilization relative to the 10-core machine.
+During proposal, CL uses a single core (≈10% utilization), whereas during evaluation it uses all 10 cores (≈100% utilization).
+The proposal phase becomes longer over iterations because fitting the surrogate model becomes more expensive as the training set grows.
+For long-running objectives, evaluation dominates wall-clock time, yielding higher average CPU utilization than for short-running objectives.
+:::
 
 ## Rush
 
 ## Experimental Setup
 
-The evaluation of fast running tasks is sensible to runtime overhead.
-Therefore, we measure the runtime of the core functions of rush in a benchmark.
-This includes pushing a task to the database, pushing a result to the database, and fetching finished tasks.
+The evaluation of short-running tasks is sensible to the overhead introduced by rush.
+Therefore, we measure the runtime of the core functions in a synthetic benchmark.
+This includes `$push_running_tasks()`, `$push_results()`, and `$fetch_finished_tasks()`.
 The fetching operation is done with and without caching.
-Runtime is reported as median and median absolute deviation (MAD) over 1000 runs.
+Runtime is reported as median and median absolute deviation (MAD) over 1000 replicates.
 The runtime is measured with the `microbenchmark` R package.
 
 ## Results
 
+::: {#tbl-runtime-results}
+
+| Operation                              | Mean Runtime [ms] | MAD [ms] |
+|:---------------------------------------|:------------------|:---------|
+| `$push_running_tasks()`                | 0.5               | 0.25     |
+| `$push_results()`                      | 0.5               | 0.25     |
+
+Runtime of the core functions of rush.
+The runtime is reported as median and median absolute deviation (MAD) over 1000 replicates.
+:::
+
+The runtime of the core functions of rush is summarized in Table @tbl-runtime-results.
 Pushing a running task to the database is the most frequent operation in rush.
 This operation takes 0.5 ms (MAD 0.25 ms) on average.
 Pushing a result to the database takes around the same time.
@@ -523,15 +598,15 @@ However, fetching with caching is much faster when caching more than 1000 tasks,
 The difference grows with the number of tasks fetched.
 We fetch one new tasks from the database and the rest from the cache.
 Still the runtime increases with the number of tasks fetched.
-This is because binding a new row to a data.table gets slower with the total number of rows.
+This is because binding a new row to a `data.table` gets slower with the total number of rows.
 
 ```{r}
 #| echo: false
 #| fig-cap: |
-#|   "Runtime of fetching finished tasks with (red lines) and without (blue lines) caching."
-#|   "The x-axis shows the number of tasks fetched from the database."
-#|   "The fetching with caching gets one new task from the database and the rest from the cache."
-#|   "The fetching without caching gets all tasks from the database."
+#|   Runtime of fetching finished tasks with (red lines) and without (blue lines) caching.
+#|   The x-axis shows the number of tasks fetched from the database.
+#|   The fetching with caching gets one new task from the database and the rest from the cache.
+#|   The fetching without caching gets all tasks from the database.
 #| label: fig-fetch-finished-tasks
 library(data.table)
 library(ggplot2)
@@ -558,8 +633,6 @@ ggplot(data, aes(x = n_tasks, y = runtime, color = benchmark)) +
   labs(x = "Number of Tasks", y = "Runtime (ms)", color = "Fetching") +
   theme_minimal()
 ```
-
-The effective cpu utilization
 
 
 # Discussion and Conclusion
