--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -80,6 +80,17 @@
   langid = {english}
 }
 
+@inproceedings{falkner2018,
+  title = {{{BOHB}}: {{Robust}} and Efficient Hyperparameter Optimization at Scale},
+  shorttitle = {{{BOHB}}},
+  booktitle = {International Conference on Machine Learning},
+  author = {Falkner, Stefan and Klein, Aaron and Hutter, Frank},
+  year = 2018,
+  pages = {1437--1446},
+  publisher = {PMLR},
+  urldate = {2026-02-10}
+}
+
 @misc{fitzjohn2025,
   title = {Redux: {{R Bindings}} to 'Hiredis'},
   shorttitle = {Redux},
